use-cases/overlays/gateways/enterprise-kgateway-overlays.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: enterprise-kgateway-overlays
spec:
  controllerName: solo.io/enterprise-kgateway
  parametersRef:
    group: enterprisekgateway.solo.io
    kind: EnterpriseKgatewayParameters
    name: ent-kgateway-overlays-params
    namespace: kgateway-system
