use-cases/overlays/gateways/gw.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
  namespace: overlays
spec:
  gatewayClassName: enterprise-kgateway-overlays
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
